# AIDungeon

./: .gitignore  Dockerfile  Jenkinsfile  invoke.yaml  pyproject.toml  requirements.txt  server.py  setup.py  tasks.py
aidungeon/: client.py  settings.py
aidungeon/story/: story_manager.py  utils.py
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.yaml  deployment.yaml  pvc.yaml  service.yaml
generator/gpt2/: gpt2_generator.py
